force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/Mogli_SMS__MogliSMS_Settings__mdt.object-meta.xml
<CustomObject>
    <label>MogliSMS Settings</label>
    <pluralLabel>MogliSMS Settings</pluralLabel>
</CustomObject>