force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__Active_Form_Instance_Status__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Active_Form_Instance_Status__c</fullName>
    <label>Active Form Instance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>