force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__AttachmentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__AttachmentTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AttachmentTrigger</label>
    <type>Checkbox</type>
</CustomField>