force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__Complete_Form_Instance_Status__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Complete_Form_Instance_Status__c</fullName>
    <defaultValue>&quot;Complete&quot;</defaultValue>
    <description>This is the status the Form__c records will be updated to when a new form is created with the value in the &quot;Active&quot; Status</description>
    <inlineHelpText>This is the status the Form__c records will be updated to when a new form is created with the value in the &quot;Active&quot; Status</inlineHelpText>
    <label>Complete Form Instance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>