force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__ContactTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked the ContactTrigger will fire</description>
    <inlineHelpText>If this field is checked the ContactTrigger will fire</inlineHelpText>
    <label>ContactTrigger</label>
    <type>Checkbox</type>
</CustomField>