force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__Create_Anonymous_Leads__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Create_Anonymous_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Anonymous Leads</label>
    <type>Checkbox</type>
</CustomField>