force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__CustomSMSServiceHandler__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__CustomSMSServiceHandler__c</fullName>
    <label>CustomSMSServiceHandler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>