force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__Debug__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>