force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__FormTrigger__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__FormTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked the FormTrigger will fire</description>
    <inlineHelpText>If this field is checked the FormTrigger will fire</inlineHelpText>
    <label>FormTrigger</label>
    <type>Checkbox</type>
</CustomField>