force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__Gateway__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Gateway__c</fullName>
    <defaultValue>&quot;TWILIO&quot;</defaultValue>
    <label>Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>