force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__LeadMergeFields__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__LeadMergeFields__c</fullName>
    <description>Enter additional fields that maybe used for Lead field merge on the SMS object</description>
    <inlineHelpText>Enter additional fields that maybe used for Lead field merge on the SMS object</inlineHelpText>
    <label>Lead Merge Fields</label>
    <type>TextArea</type>
</CustomField>