force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__LeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__LeadTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked, the lead trigger will fire</description>
    <inlineHelpText>If this field is checked, the lead trigger will fire</inlineHelpText>
    <label>LeadTrigger</label>
    <type>Checkbox</type>
</CustomField>