force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__PossibleAnswerDelimiter__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__PossibleAnswerDelimiter__c</fullName>
    <defaultValue>&quot;:::&quot;</defaultValue>
    <description>This is the string delimiter that should be at the end of each possible answer in the PossibleAnswer__c.PossibleText__c field.</description>
    <inlineHelpText>This is the string delimiter that should be at the end of each possible answer in the PossibleAnswer__c.PossibleText__c field.</inlineHelpText>
    <label>Possible Answer Delimiter</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>