force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__TelerivetPhoneId__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__TelerivetPhoneId__c</fullName>
    <label>TelerivetPhoneId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>