force-app/main/default/objects/Mogli_SMS__MogliSMS_Settings__mdt/fields/Mogli_SMS__TwilioPhone__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__TwilioPhone__c</fullName>
    <label>TwilioPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>